# FastAPI-Auth-Library

./: .gitignore  Makefile  auth.py  config.py  library.db  main.py  models.py  pyproject.toml  schemas.py
app/: database.py  main.py  models.py
